# VideoStreamingOpenIGTLink

./: CMakeLists.txt  CMakeListsOpenH264.txt.in  CMakeListsOpenIGTLink.txt.in  EvaluationTool.cpp  EvaluationTool.h  README.md  welsencUtil.cpp
VideoStreamOpenIGTLink/: CMakeLists.txt  GenerateVideoStreamOpenIGTLinkConfig.cmake  H264Decoder.cpp  H264Decoder.h  UseVideoStreamOpenIGTLink.cmake.in  VideoStreamIGTLinkReceiver.cxx  VideoStreamIGTLinkReceiver.h  VideoStreamIGTLinkServer.cxx  VideoStreamIGTLinkServer.h  VideoStreamOpenIGTLinkConfig.cmake.in  welsenc.cpp  welsenc.h
VideoStreamReceiver/: CMakeLists.txt  VideoStreamReceiver.cxx  client.cfg
VideoStreamServer/: CMakeLists.txt  VideoStreamServer.cxx  welsenc.cfg
