cmake_minimum_required(VERSION 2.8)
project( VideoStreamOpenIGTLink )

set(CMAKE_PREFIX_PATH	"${CMAKE_BINARY_DIR}/OpenIGTLink-build")	
find_package(OpenIGTLink REQUIRED)
include(${OpenIGTLink_USE_FILE})
include_directories(${OpenIGTLink_INCLUDE_DIRS})
link_directories(${OpenIGTLink_LIBRARY_DIRS})
#Add OpenH264 directly to our build.
#add_subdirectory(${CMAKE_BINARY_DIR}/Testing/OpenH264)
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec/common/inc")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec/console/common/src")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec/console/common/inc")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec/console/dec/inc")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec/api/svc")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec/encoder/core/inc")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/codec/processing/interface")
include_directories("${CMAKE_BINARY_DIR}/OpenH264/test")

LINK_DIRECTORIES("${CMAKE_BINARY_DIR}/OpenH264")

SET(VideoStreamOpenIGTLink_SOURCES VideoStreamIGTLinkServer.cxx VideoStreamIGTLinkReceiver.cxx welsenc.cpp ${CMAKE_BINARY_DIR}/OpenH264/test/api/sha1.c H264Decoder.cpp ${CMAKE_BINARY_DIR}/OpenH264/codec/console/common/src/read_config.cpp)
SET(VideoStreamOpenIGTLink_INCLUDES VideoStreamIGTLinkServer.h VideoStreamIGTLinkReceiver.h welsenc.h ${CMAKE_BINARY_DIR}/OpenH264/test/sha1.h H264Decoder.h ${CMAKE_BINARY_DIR}/OpenH264/codec/console/common/inc/read_config.h)

add_library( VideoStreamOpenIGTLink ${VideoStreamOpenIGTLink_SOURCES} ${VideoStreamOpenIGTLink_INCLUDES})
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
  target_link_libraries( VideoStreamOpenIGTLink OpenIGTLink ${CMAKE_BINARY_DIR}/OpenH264/OpenH264.lib)
else(CMAKE_SYSTEM_NAME STREQUAL "Windows")
  target_link_libraries( VideoStreamOpenIGTLink OpenIGTLink ${CMAKE_BINARY_DIR}/OpenH264/libopenh264.a)
endif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
